--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-notification-state",
-  "version": "1.0.0",
+  "name": "@stack-inc/electron-notification-state",
+  "version": "0.1.0",
   "description": "Should you send a notification?",
   "main": "./lib/index.js",
   "typings": "./lib/index",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/felixrieseberg/electron-notification-state.git"
+    "url": "git+https://github.com/stack-inc/electron-notification-state.git"
   },
   "author": {
     "email": "felix@felixrieseberg.com",
@@ -30,9 +30,9 @@
     "notifications"
   ],
   "bugs": {
-    "url": "https://github.com/felixrieseberg/electron-notification-state/issues"
+    "url": "https://github.com/stack-inc/electron-notification-state/issues"
   },
-  "homepage": "https://github.com/felixrieseberg/electron-notification-state#readme",
+  "homepage": "https://github.com/stack-inc/electron-notification-state#readme",
   "dependencies": {
     "macos-notification-state": "^2.0.1",
     "windows-notification-state": "^1.3.4",
