--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Should you send a notification?",
   "main": "./lib/index.js",
-  "typings": "./lib/index",
+  "typings": "./lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stack-inc/electron-notification-state.git"
@@ -35,8 +35,8 @@
   "homepage": "https://github.com/stack-inc/electron-notification-state#readme",
   "dependencies": {
     "macos-notification-state": "^2.0.1",
-    "windows-notification-state": "^1.3.4",
-    "windows-quiet-hours": "^2.0.0"
+    "@stack-inc/windows-notification-state": "^0.1.2",
+    "@stack-inc/windows-quiet-hours": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.0"
